sophons/apps/monitoring/grafana/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: grafana
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Graphs, graphs, more graphs
    gethomepage.dev/group: Alerting & Notifications
    gethomepage.dev/icon: grafana.svg
    gethomepage.dev/name: Grafana
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure

  hostnames:
    - klstrmntr.sophons.cloud

  rules:
    - backendRefs:
        - name: grafana
          port: 80
